# suur-things-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: POSITIONING.md
src/suur_things_mcp/: __init__.py  config.py  dashboard.py  organize.py  reads.py  server.py  urlscheme.py
tests/: test_dashboard.py  test_dashboard_browser.py  test_urlscheme.py
